<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_new_plan"
        android:title="@string/action_new_plan"
        android:orderInCategory="1"
        app:showAsAction="never" />

    <item android:id="@+id/action_clear_data"
        android:title="@string/action_clear_data"
        android:orderInCategory="2"
        app:showAsAction="never" />

    <item android:id="@+id/action_export_data"
        android:title="@string/action_export_data"
        android:orderInCategory="3"
        app:showAsAction="never" />

    <item android:id="@+id/action_export_plan"
        android:title="@string/action_export_plan"
        android:orderInCategory="4"
        app:showAsAction="never" />

    <item android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="5"
        app:showAsAction="never" />
</menu>
