<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jakub.osobistytrenerbiegacza.TrainingActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <ScrollView android:layout_height="50dp"
            android:layout_width="match_parent">
            <TextView android:id="@+id/tv_trainingText"
                android:text="pelny tekst treningu |tfhgfh|nfghjhyj\nfghgfh\ncos jeszcze razy piec po szesc\ni moze costam bylo do zrobienia"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </ScrollView>
        <TextView android:id="@+id/tv_currentLine"
            android:text="aktualna linia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#ffff3436"
            android:gravity="center_horizontal" />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp">


        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">
            <TextView
                android:id="@+id/activity_training_tv_time"
                android:text="@string/time_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60dp"
                android:textColor="#ff000000"
                android:layout_gravity="right" />

            <TextView
                android:id="@+id/activity_training_tv_pace"
                android:text="@string/pace_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="40dp"
                android:textColor="#ff000000" />

            <TextView
                android:id="@+id/activity_training_tv_distance"
                android:text="@string/distance_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="40dp"
                android:textColor="#ff000000" />
        </LinearLayout>
        <Button android:id="@+id/activity_training_btn_startTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_start"
            android:onClick="startTraining"/>

        <Button android:id="@+id/activity_training_btn_pauseTraining"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_pause"
            android:onClick="pauseTraining"/>
    </LinearLayout>

    <Button
        android:id="@+id/activity_training_btn_finishTraining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Zakończ"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:onClick="finishTraining"/>
</RelativeLayout>